--- a/blog/Issue9/2024-02-27-art.md
+++ b/blog/Issue9/2024-02-27-art.md
@@ -44,13 +44,13 @@ Vincent Bamidele Omolaye
 
 Gbenga Oluwaseun Falana and Olusegun Stephen Titus
 
-[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1oinwtcTCnHpMaf7RtjyO_g3FRby26Zw8/view?usp=sharing)
+[Read Online](/articles/issue9/ethnic-based-popular-music-in-ekiti) [Download](https://drive.google.com/file/d/1oinwtcTCnHpMaf7RtjyO_g3FRby26Zw8/view?usp=sharing)
 
 #### Cultural Influence Of The Odabara Dance On The Cultural Development Of Ikem Community, Isi-Uzo Local Government, Enugu State
 
 Emmanuel Oyeunji Alemede and Akinbiola Oluwabusayo
 
-[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1NYlU_t-IMowjUdg0rJbrh-qyjKxoSQKr/view?usp=sharing)
+[Read Online](/articles/issue9/cultural-influence-of-the-odabara-dance-on-the-cultural-development-of-ikem-community) [Download](https://drive.google.com/file/d/1NYlU_t-IMowjUdg0rJbrh-qyjKxoSQKr/view?usp=sharing)
 
 ### Movements And Sounds
 
