--- a/issue9/article04/2024-02-22.mdx
+++ b/issue9/article04/2024-02-22.mdx
@@ -1,13 +1,15 @@
 ---
 title: "#4 Repositioning Afro-pop in the Global Music Space: The Contributions of Davido Music Worldwide (DMW)'s 30 Billion Gang"
 slug: the-contributions-of-davido-music-worldwide
-description: ''
+description: "This paper, however, examines the contributions of Davido Music Worldwide (DMW)'s 30 billion gang, one of the top-sorted Nigerian artists, towards repositioning the Afro-pop genre in the global music space. The goal is to reveal essential aesthetics that give Afro-pop music vibrancy and attraction among youths  worldwide."
 authors: [bomolaye]
 tags:
   [hip-hop, afro-pop, 30 billion gang, african identity, david adedeji adeleke]
 ---
 
 # #4 Repositioning Afro-pop in the Global Music Space: The Contributions of Davido Music Worldwide (DMW)'s 30 Billion Gang
+
+{/* truncate */}
 
 ```
 UDC: 78.036(669.1)
@@ -49,7 +51,7 @@ export function Name({ author, affil, email }) {
 	<h4>Abstract</h4>
 	<div>
 
-    	The harmonious collaboration of inventiveness among Afro-pop artistes has instigated intense modification in todays Afro-pop music scene, and, as well, repositioned its tentacles in the global music space. This is evident among today's artistes across the shore of Africa,  in which Davido Music Worldwide (DMW)'s 30 billion Gang belong. Precisely, the strive of this artist has continued to awaken artistic consciousness among Nigerian youths,  particularly, and Afro-pop music lovers in general. This paper, however, examines the contributions of Davido Music Worldwide (DMW)'s 30 billion gang,  one of the top-sorted Nigerian artists, towards repositioning the Afro-pop genre in the global music space. The goal is  to reveal essential aesthetics that give Afro-pop music vibrancy and attraction among youths  worldwide. Primary research process of survey and descriptive method were supported with document observation technique for the study. Findings showed that 30 billion Gang Music Group, within the ambience of its music productions,  has been able not only to fuse some elements of traditional sound, which  influenced different artistes across the world, but also to instill  African identity in the global music space. This effort was noticed to have contributed to what is now termed "African sound" in the global music scene. Furthermore, the study also revealed the upsurge in collaborations between African and foreign artistes on singles, electronic plays (EP), or albums,  which has become a norm among foreign artists. The study concludes that while some musical groups create menace and disrupt the socio-economic wellbeing of the society, others,  such as Davido Music Worldwide (DMW)'s 30 billion gang, were noticed to have been promoting the richness of African musical identity across the globe, through their artistic ideology.
+    	The harmonious collaboration of inventiveness among Afro-pop artistes has instigated intense modification in todays Afro-pop music scene, and, as well, repositioned its tentacles in the global music space. This is evident among today's artistes across the shore of Africa, in which Davido Music Worldwide (DMW)'s 30 billion Gang belong. Precisely, the strive of this artist has continued to awaken artistic consciousness among Nigerian youths,  particularly, and Afro-pop music lovers in general. This paper, however, examines the contributions of Davido Music Worldwide (DMW)'s 30 billion gang, one of the top-sorted Nigerian artists, towards repositioning the Afro-pop genre in the global music space. The goal is to reveal essential aesthetics that give Afro-pop music vibrancy and attraction among youths  worldwide. Primary research process of survey and descriptive method were supported with document observation technique for the study. Findings showed that 30 billion Gang Music Group, within the ambience of its music productions, has been able not only to fuse some elements of traditional sound, which  influenced different artistes across the world, but also to instill  African identity in the global music space. This effort was noticed to have contributed to what is now termed "African sound" in the global music scene. Furthermore, the study also revealed the upsurge in collaborations between African and foreign artistes on singles, electronic plays (EP), or albums,  which has become a norm among foreign artists. The study concludes that while some musical groups create menace and disrupt the socio-economic wellbeing of the society, others, such as Davido Music Worldwide (DMW)'s 30 billion gang, were noticed to have been promoting the richness of African musical identity across the globe, through their artistic ideology.
 
     	<div>
     		<strong>Keywords:</strong>
@@ -159,7 +161,7 @@ Davido began his education at the British International School located in Victor
 
 ## Davido Music Worldwide (DMW)'s 30 Billion Gang
 
-David Adedeji Adeleke officially founded Davido Music Worldwide (DMW) in July 2016. Davido is signed to Sony, Radio Corporation of America (RCA). The record label has continued to grow not only as one of the top-notch Nigerian record labels, but as one of Africaâ€™s prominent record labels. His record label signed and housed several music artists such as Mayokun, Peruzzi, Liya, May D, Dehinde, Ayanfe, Idowest, just to mention a few. In addition, music producers such as Obi Prosper (Speroach) and Daniel Stein (Fresh) are among the vibrant producers of the label. Also, one of the record labels Disc-Jockey (DJ) is Ebianga Inang Ikpeme, popularly known as Ecool. Over the years, the record label has been able to innovate and expand its tentacles and remain at the forefront of record labels in Africa. This was achieved as a result of his dedicated staff and the entire workforce of his organization. Although he lost his son in 2022, at the time of gathering data for this study, he welcomed a set of twins with his wife, Chioma, on October 13th 2023. He also has two children from his baby mamas, namely Aurora Imade and Hailey Veronica. 
+David Adedeji Adeleke officially founded Davido Music Worldwide (DMW) in July 2016. Davido is signed to Sony, Radio Corporation of America (RCA). The record label has continued to grow not only as one of the top-notch Nigerian record labels, but as one of Africaâ€™s prominent record labels. His record label signed and housed several music artists such as Mayokun, Peruzzi, Liya, May D, Dehinde, Ayanfe, Idowest, just to mention a few. In addition, music producers such as Obi Prosper (Speroach) and Daniel Stein (Fresh) are among the vibrant producers of the label. Also, one of the record labels Disc-Jockey (DJ) is Ebianga Inang Ikpeme, popularly known as Ecool. Over the years, the record label has been able to innovate and expand its tentacles and remain at the forefront of record labels in Africa. This was achieved as a result of his dedicated staff and the entire workforce of his organization. Although he lost his son in 2022, at the time of gathering data for this study, he welcomed a set of twins with his wife, Chioma, on October 13th 2023. He also has two children from his baby mamas, namely Aurora Imade and Hailey Veronica.
 
 Davido Music Worldwide (DMW) 30 Billion Gang (30BG) is not a clique or group of gangsters; rather, a record label which housed a number of talented artistes and music producers. Unlike some musical groups, DMW 30 Billion Gang is known for its contributions towards humanitarian developments. He has continued to contribute to the society, and the projection of Afro-pop music, specifically engraving Nigerian musical identity to the global music space.
 Contributions of Davido Music Worldwide (DMW) 30 Billion Gang
@@ -168,7 +170,7 @@ There is no denying to the fact that Afro-pop music is a genre practiced among y
 
 It is pertinent to note that DMW's 30 Billion Gang musical group, within the ambience of its music productions, has been able to fuse some elements of traditional sounds, which not only influenced different artistes across the world, but installed African identity in the global music space. Thus, it has resulted in what is today termed 'African sound' in the global music scene. To this end, the upsurge in collaborations between African and foreign artistes on singles, electronic play (EP), or album has become a norm among foreign artistes.
 
-_____________
+---
 
 ## Conclusion
 
@@ -176,7 +178,7 @@ It has become clearer that Nigerian Afro-pop artists, in which DMW's 30 Billion 
 
 Moreover, tickets of their organised shows across various venues in the United Kingdom, London, Washington DC, Atlanta Georgia are sold out. Davido's music performances, as well as other artistes such as Burna Boy, Wizkid, Tiwa Salvage, Asake, 2Baba, just to mention a few, has contributed rapidly to the development of Afro-pop music in Nigeria, to be specific, and Africa in general. The study, however, concludes that while some gangs create menace and disrupt the socio-economic wellbeing of the society, others such as Davido Music Worldwide (DMW)'s 30 Billion Gang, were noticed that through their artistic ideology, they have been impacting positively on the promotion of African music across the globe.
 
-__________________
+---
 
 ## References
 
@@ -184,7 +186,7 @@ __________________
 
 1. Adedeji, A. 2000. "A New Direction in Nigerian Music Arts: The Emergence of Afrocenticism: Lagbaja! As a Case Study." M.A. Thesis. University of Ibadan, Nigeria.
 2. Adam, T. 2015. "Experimental Music with Young Novices Politics and Pedagogy". _Leonardo Music Journal, Vol. 25: 30-33_.
-3. Ademolu, O. A. 2018. "Music Social Change and Social Process Among the Yoruba in Southwest Nigeria: A Theoretical Discourse."  A publication of the Department of Sociology, Olabisi Onabanjo University, Ago-Iwoye. 1-22.
+3. Ademolu, O. A. 2018. "Music Social Change and Social Process Among the Yoruba in Southwest Nigeria: A Theoretical Discourse." A publication of the Department of Sociology, Olabisi Onabanjo University, Ago-Iwoye. 1-22.
 4. Amabile, T. M. 1996. _Creativity in context: Update to "The Social Psychology of Creativity."_ Boulder, CO: Westview Press.
 5. Awuawuer, T. J. 2016. "Repositioning Nigerian Music and Dance for Cultural Diplomacy: Lessons from Swange Music and Dance in Nigeria." _Africology: The Journal of Pan-African Studies. 9(6): 140-153_.
 6. Guilford, J. P. 1950. "Creativity." _American Psychologist (5): 444-454_.
