--- a/issue9/article03/2024-02-23.mdx
+++ b/issue9/article03/2024-02-23.mdx
@@ -260,38 +260,38 @@ ________________
 <div className='references'>
 
 1. Adebayo, J. O. 2017. "‘Vote not Fight’: Examining music’s role in fostering non-violent elections in Nigeria." _African Journal on Conflict Resolution 17(1): 55-77–77._
-2. Adeduntan, A. 2018. ”Yoruba imaginary in the eco-cinema of Tunde Kelani.” _Green Letters 22(3): 288–300_.
+2. Adeduntan, A. 2018. ”Yoruba imaginary in the eco-cinema of Tunde Kelani.” _Green Letters 22(3): 288–300_. [doi](https://doi.org/10.1080/14688417.2018.1531724)
 3. Adeoye, J. O. 2013. “Patriotic music: A tool for sustaining national security in Nigeria.” _Ondo Journal of Science and Science Education 4(1): 9-15_.
-4. Akingbe, N. and P. A. Onanuga. 2018. “Leveraging the Airwaves: Harvesting Ingenuity in Nigerian Hip Hop’s Lyrics.” _Journal of the Musical Arts in Africa 15 (1-2): 19–40_.
+4. Akingbe, N. and P. A. Onanuga. 2018. “Leveraging the Airwaves: Harvesting Ingenuity in Nigerian Hip Hop’s Lyrics.” _Journal of the Musical Arts in Africa 15 (1-2): 19–40_. [doi](https://%20doi.org/10.2989/18121004.2018.1534335)
 5. Allen, A. S. 2011. “Prospects and problems for ecomusicology in confronting a crisis of culture.” _Journal of the American Musicological Society 62(2): 414-424_.
 6. _____. 2017. “Greening the Curriculum: Beyond a Short Music History in Ecomusicology.” _Journal of Music History Pedagogy 8(1): 91–109_.
 7. Allen, A. S. and K. Dawe. 2016. _Current Directions in Ecomusicology – Music, Culture, Nature_. Edited by Aaron S. Allen and Kevin Dawe. Routledge, Taylor & Francis Group.
-8. Challe, Tiffany. 2015.“Ecomusicology: back to the roots of sound / music and environmental sustainability.” MA Thesis, Graduate Center, City University of New York.
-9. Fasan, R. 2014. “Wetin dey happen? Wazobia, Popular Arts, and Nationhood.” _Journal of African Cultural Studies_.
+8. Challe, Tiffany. 2015.“Ecomusicology: back to the roots of sound / music and environmental sustainability.” MA Thesis, Graduate Center, City University of New York. [academicworks](https://academicworks.cuny.edu/gc_etds/883)
+9. Fasan, R. 2014. “Wetin dey happen? Wazobia, Popular Arts, and Nationhood.” _Journal of African Cultural Studies_. [doi](http://dx.doi.org/10.1080/13696815.2014.977852)
 10. Feisst, S. 2016. “Music and Ecology.” _Contemporary Music Review 35(3): 293–295._
 11. Goodman, D. J. 2011. _Promoting diversity and social justice: Educating people from privileged groups_. London: Routledge.
 12. Guy, N. 2009. “Flowing down Taiwan’s Tamsui river: Towards an ecomusicology of the environmental imagination.” _Ethnomusicology 53(2): 218-248_.
-13. Hess, J. 2019. ”Singing our own song: Navigating identity politics through activism in music.” _Research Studies in Music Education 41(1): 61–80_.
+13. Hess, J. 2019. ”Singing our own song: Navigating identity politics through activism in music.” _Research Studies in Music Education 41(1): 61–80_. [doi](https://doi.org/10.1177/1321103X18773094)
 14. Impey, A. 2013. ”Songs of Mobility and Belonging: Intervention.” _International Journal of Postcolonial Studies 15(2); 255-271_.
-15. Okeke, R. C. 2019. “Politics, Music and Social Mobilization in Africa: The Nigeria Narrative and Extant Tendencies.” _International Letters of Social and Humanistic Sciences (86): 28–41_.
+15. Okeke, R. C. 2019. “Politics, Music and Social Mobilization in Africa: The Nigeria Narrative and Extant Tendencies.” _International Letters of Social and Humanistic Sciences (86): 28–41_. [doi](https://doi.org/10.18052/www.scipress.com/ilshs.86.28)
 16. Olatunji, M. 2007. “Yabis: A Phenomenon in the Contemporary Nigerian Music.” _Journal of Pan African Studies 1(9): 26_.
 17. Olaniyan, T. 2009. _Arrest the Music! Fela and His Rebel Art and Politics_. Ibadan, Nigeria: Bookcraft.
-18. Oloruntoba-Oju, D. 2019.“State power, postmodernist identities and conflict in contemporary Nigerian popular music.” _Journal of the African Literature Association 13(1): 48–63_.
+18. Oloruntoba-Oju, D. 2019. “State power, postmodernist identities and conflict in contemporary Nigerian popular music.” _Journal of the African Literature Association 13(1): 48–63_. [doi](https://doi.org/10.1080/21674736.2019.1594954)
 19. Olorunyomi, S. 2003. _Afrobeat! Fela and the Imagined Continent_. Trenton: Africa World Press.
 20. Omojola, B. 2012. _Yoruba Music in the Twentieth Century: Identity, Agency and Performance Practice_. New York: University of Rochester Press 2012. Bibliog; Index ISBN 978 -1- 58046-409-3
-21. Peters, M. 2020. _Popular Music, Critique and Manic Street Preachers_. Palgrave Macmillan.
-22. Publicover, J. L., T. S. Wright, S. Baur, & P. N. Duinker. 2018. “Music as a tool for environmental education and advocacy: artistic perspectives from musicians of the Playlist for the Planet.” _Environmental Education Research 24(7): 925–936_.
-23. Salawu, O. M. 2020. ”Abàmì Èdá: Personhood and Socio-political Commitment in Fela’s Music.” _Muziki, 1–18_.
+21. Peters, M. 2020. _Popular Music, Critique and Manic Street Preachers_. Palgrave Macmillan. [doi](https://doi.org/10.1007/978-3-030-43100-6)
+22. Publicover, J. L., T. S. Wright, S. Baur, & P. N. Duinker. 2018. “Music as a tool for environmental education and advocacy: artistic perspectives from musicians of the Playlist for the Planet.” _Environmental Education Research 24(7): 925–936_. [doi](https://doi.org/10.1080/13504622.2017.1365356)
+23. Salawu, O. M. 2020. ”Abàmì Èdá: Personhood and Socio-political Commitment in Fela’s Music.” _Muziki, 1–18_. [doi](https://doi.org/10.1080/18125980.2020.1781547)
 24. Schippers, H. and D. Bendrups. 2015. “Ethnomusicology, Ecology and the Sustainability of Music Cultures.” _The World of Music 4(1): 9-19_.
 25. Taylor, H., and A. Hurley. 2014. “Music and Environment: Registering Contemporary Convergences.” _Journal of Music Research 20(1): 1-18_.
-26. Titon, J. T. 2018. “Ecomusicology and the Problems in Ecology.” _MUSICultures, 45(1/2): 255–264_.
+26. Titon, J. T. 2018. “Ecomusicology and the Problems in Ecology.” _MUSICultures, 45(1/2): 255–264_. [library.illinois.edu](http://www.library.illinois.edu/proxy/go.php?url=http://search.ebscohost.com/login.aspx?direct=true&db=asn&AN=136632385&site=eds-live&scope=site)
 27. Titus, O. S. 2019. “Ecomusicology, Indigenous Knowledge And Environmental Degradation In Ibadan, Nigeria.” _Journal of International Library of African Music, 72–90_.
 28. ____. 2018. “Musical narratives of oil exploration and sea degradation from the Niger Delta.” In _Monsoon Assemblages, edited by L. Bremner, 91–99_.
 
 </div>
 
 <div className='up'>
-	<a href='#'>![Go to top]('../up.png')</a>
+	<a href='#'> ![Go to top]('../up.png') </a>
 </div>
 
 </div>
