--- a/blog/Issue9/2024-02-27-art.md
+++ b/blog/Issue9/2024-02-27-art.md
@@ -58,13 +58,13 @@ Emmanuel Oyeunji Alemede and Akinbiola Oluwabusayo
 
 Stella Paschalidou
 
-[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1fXhK513b7La1MnwYwZWpco46V5ZFVtXI/view?usp=sharing)
+[Read Online](/articles/issue9/taxonomy-of-gesture-sound-relationships) [Download](https://drive.google.com/file/d/1fXhK513b7La1MnwYwZWpco46V5ZFVtXI/view?usp=sharing)
 
 #### The Synergy Of Music, Movement And Technology In The Author's Choreographies
 
 Anna Galikowska-Gajewska
 
-[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1jMmRlyq2ZT99dsnCk2CIrip9G8Dyh1Zs/view?usp=sharing)
+[Read Online](/articles/issue9/the-synergy-of-music-movement-and-technology) [Download](https://drive.google.com/file/d/1jMmRlyq2ZT99dsnCk2CIrip9G8Dyh1Zs/view?usp=sharing)
 
 ### Education – Pedagogy & Policy
 
