--- a/issue9/article07/2024-02-19.mdx
+++ b/issue9/article07/2024-02-19.mdx
@@ -1,7 +1,7 @@
 ---
 title: '#7 Taxonomy of gesture-sound relationships in Manual Interactions with Imaginary Objects (MIIO) in Hindustani Dhrupad vocal improvisation'
-slug:
-description: ''
+slug: taxonomy-of-gesture-sound-relationships
+description: "In Hindustani (North Indian Classical) Dhrupad vocal music, singers often appear performing manual interactions with imaginary objects, referred to as MIIOs (Manual Interactions with Imaginary Objects) in this study. This paper revisits existing taxonomies in  respect to gesture-sound relationships, examining perspectives in classifying MIIOs within these frameworks."
 authors: []
 tags:
   [
@@ -61,7 +61,7 @@ export function Name({ author, affil, email }) {
 	<h4>Abstract</h4>
 	<div>
 
-    	Over the years, multiple taxonomies have emerged to categorize the diverse range of  movements, particularly those linked to music, with a wealth of literature in music performance exploring this topic. Despite extensive discussions, conflicting opinions persist, and a consensus on a single taxonomy remains elusive, highlighting the intricate nature of movement types. In Hindustani (North Indian Classical) Dhrupad vocal music, singers often appear performing manual interactions with imaginary objects, referred to as "MIIOs" (Manual  Interactions with Imaginary Objects) in this study. This paper revisits existing taxonomies in  respect to gesture-sound relationships, examining perspectives in classifying MIIOs within these frameworks. Based on the results, it underscores the challenge of classifying MIIOs into  these established, emphasizing their unique status in the realm of music-related movements.
+    	Over the years, multiple taxonomies have emerged to categorize the diverse range of  movements, particularly those linked to music, with a wealth of literature in music performance exploring this topic. Despite extensive discussions, conflicting opinions persist, and a consensus on a single taxonomy remains elusive, highlighting the intricate nature of movement types. In Hindustani (North Indian Classical) Dhrupad vocal music, singers often appear performing manual interactions with imaginary objects, referred to as "MIIOs" (Manual Interactions with Imaginary Objects) in this study. This paper revisits existing taxonomies in  respect to gesture-sound relationships, examining perspectives in classifying MIIOs within these frameworks. Based on the results, it underscores the challenge of classifying MIIOs into  these established, emphasizing their unique status in the realm of music-related movements.
 
     	<div>
     		<strong>Keywords:</strong>
